| Bug #10407 | Incorrect error is displayed when creating a teble with incorrect DB name. | ||
|---|---|---|---|
| Submitted: | 6 May 2005 12:16 | Modified: | 25 Jul 2005 21:55 |
| Reporter: | Disha | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 4.1.11, 5.0.4 Beta | OS: | Microsoft Windows (Windows 2003) |
| Assigned to: | Jim Winstead | Target Version: | |
[6 May 2005 12:16]
Disha
[6 May 2005 13:43]
Hartmut Holzgraefe
Verified, happens on 4.1.11 (linux), too ...
[9 May 2005 9:23]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/24706
[1 Jun 2005 1:39]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/25424
[29 Jun 2005 13:17]
Magnus Svensson
Approved
[22 Jul 2005 5:09]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/27459
[22 Jul 2005 23:45]
Jim Winstead
Fixed in 4.1.14 and 5.0.11.
[25 Jul 2005 21:55]
Mike Hillyer
Documented in 4.1.14 and 5.0.11 changelogs: <listitem><para>Incorrect error message displayed if user attempted to create a table in a non-existing database using <literal>CREATE database_name.table_name</literal> syntax. (Bug #10407)</para></listitem>
