Fix error message generated when trying to create a table in a non-existent database. (Bug #10407)